# journaling-ai

./: .env.example  .gitignore  AI_MODEL_RECOMMENDATIONS.md  ANALYTICS_CACHING_GUIDE.md  ANALYTICS_OPTIMIZATION_PROGRESS.md  AUTH_IMPLEMENTATION_PROGRESS.md  BACKEND_ERROR_FIXES_COMPLETION.md  CHANGELOG.md  CLAUDE_AI_TEST_RESULTS.md  CLEANUP_ANALYSIS_REPORT.md  CLEANUP_COMPLETION_REPORT.md  COMPREHENSIVE_ERROR_ANALYSIS.md  DATA_PRESERVATION_STRATEGY.md  DISABLED_FEATURES_REMINDER.md  FINAL_ERROR_RESOLUTION_REPORT.md  FIXES_PROGRESS_REPORT.md  FRONTEND_FIX_PLAN.md  GIT_WORKFLOW.md  HARDWARE_ADAPTIVE_AI_CLEANUP_COMPLETION.md  INSIGHTS_BACKUP.md  INTELLIGENT_TEXT_PROCESSING_ENHANCEMENT.md  OFFLINE_MODELS_SUCCESS_REPORT.md  PERSONALITY_OPTIMIZATION_PROGRESS.md  PHASE_2B_BACKEND_ANALYSIS.md  PHASE_2_CLEANUP_ANALYSIS.md  PHASE_2_COMPLETION_REPORT.md  PHASE_2_EXECUTION_SUMMARY.md  POPULATE_SCRIPT_CHAT_INVESTIGATION.md  POSTGRESQL_MIGRATION_COMPLETE.md  PRIORITY_6_SETUP_COMPLETE.md  SERVER_ERRORS_AND_WARNINGS_TODO.md  TYPESCRIPT_MIGRATION_TODO.md  VECTOR_DATABASE_FIX_REPORT.md  YEAR_DATA_GENERATION_GUIDE.md  claude.txt  claude_analysis.sh  claude_analysis_02.sh  claude_cli_streaming_analysis.ipynb  claude_streaming_analysis.ipynb  claude_work.sh  (+83 more)
.claude/: requirements-docu.md
analysis_results/: actionable_todo_list_20250807_154401.md  analysis_backend_20250807_154401.md  analysis_frontend_20250807_154401.md  analysis_progress_20250807_154401.json  backend_api_deep_20250807_154401.md  backend_models_deep_20250807_154401.md  backend_overview_20250807_154401.md  backend_services_deep_20250807_154401.md  backend_tasks_deep_20250807_154401.md  comprehensive_assessment_20250807_154401.md  final_analysis_report_20250807_154401.md  frontend_components_deep_20250807_154401.md  frontend_overview_20250807_154401.md  frontend_services_deep_20250807_154401.md  quota_resume_20250807_152502.sh  quota_resume_20250807_154401.sh  script_self_todo_20250807_154401.md
backend/: .dockerignore  CHANGELOG.md  Dockerfile  Dockerfile.gpu  GPU_MEMORY_MANAGEMENT_SUMMARY.md  HARDWARE_ADAPTIVE_MODELS_REPORT.md  INTEGRATION_SUCCESS_REPORT.md  OFFLINE_MODELS_GUIDE.md  README.md  alembic.ini  check_and_create_user.py  check_users.py  create_default_user.py  create_tables.py  enable_gin_trgm_ops.py  fix_constraints.sql  recreate_database.py  requirements-full-backup.txt  requirements-gpu.txt  requirements-minimal.txt  requirements.txt  run.py  setup_psychology_db.py  simple_migrate_to_enhanced.py  test_adaptive_ai.py  test_connection_fixed.py  test_enhanced_ai_integration.py  test_gpu_memory_integration.py  test_hardware_adaptive_models.py  update_to_enhanced_models.py  verify_migration.py
config/: redis.conf
docs/: CHANGELOG-AI-SERVICES.md  CHANGELOG.md  COMMIT_HISTORY_SUMMARY.md  EXTRACTED_TOOLS.md  Real_Research_Integration_Strategy.md  security_audit_report.md  task_index.md
scripts/: README.md  (+5 more)
tools/ai-code-analyzer/: .ai-instructions.md  README.md  architecture.md  check-phase-status.sh  progress-tracker.md  project-todo.md  pyproject.toml
tools/ai-code-analyzer/docs/: README.md
tools/ai-code-analyzer/docs/api/: cli-reference.md
tools/ai-code-analyzer/docs/architecture/: overview.md
tools/ai-code-analyzer/docs/user-guide/: installation.md
tools/ai-code-analyzer/planning/: phase-1-foundation.md  phase-2-core-engine.md  phase-3-advanced.md
tools/ai-code-analyzer/src/ai_analyzer/: __init__.py
tools/ai-code-analyzer/src/ai_analyzer/analyzers/: __init__.py
tools/ai-code-analyzer/src/ai_analyzer/cli/: __init__.py  main.py
tools/ai-code-analyzer/src/ai_analyzer/core/: __init__.py  config.py  models.py
tools/ai-code-analyzer/src/ai_analyzer/llm/: __init__.py
tools/ai-code-analyzer/src/ai_analyzer/providers/: __init__.py  base.py  copilot.py
tools/ai-code-analyzer/src/ai_analyzer/utils/: __init__.py
tools/ai-code-analyzer/tests/: conftest.py  test_package.py
(+473 files in other folders)
